SyntacticAnalyzer/tests/fail/while02.java
class foo {
	ctor (int n1)
	var boolean b1;
	var int n2, n3, n4;
	{
		while (n1 != n2 && b1 || true >= 5+5/2){
			while (n4==n3) // falta {
			}
		}
	}
